--- a/my_solutions/lab1.yaml
+++ b/my_solutions/lab1.yaml
@@ -10,6 +10,15 @@ spec:
     image: mysql
     ports:
       - containerPort: 3306
+    env: 
+    - name: "MYSQL_ROOT_PASSWORD"
+      value: "password"
+    - name: "MYSQL_USER"
+      value: "mysql"
+    - name: "MYSQL_PASSWORD"
+      value: "mysql"
+    - name: "MYSQL_DATABASE"
+      value: "sample"
 
 ---
 kind: Service
